ingress/traefik/03-ingress-route-ping.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-int-ping
  namespace: traefik
  # annotations:
  #   kubernetes.io/ingress.class: traefik-internal
spec:
  entrypoints:
    - web
  routes:
    - match: PathPrefix(`/ping`)
      kind: Rule
      services:
      - name: ping@internal
        kind: TraefikService
