ingress/traefik/05-test-ingress-route-whoami.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`your.domain-name.com`)
    kind: Rule
    services:
      - name: whoami
        port: 80
